--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="image-accueil">
             <img class="img-accueil" src="pictures/img-accueil.jpg" alt="">
             <h1>Simplon, <br>réseau de Fabriques<br>numériques et inclusives</h1>
-            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</br>Suspendisse varius enim in eros elementum tristique.</h2>
+            <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit</br>Suspendisse varius enim in eros elementum tristique.</h2>
             <button class="button-accueil">Nous contacter</button>
         </div>
         <div class="after-nav">
